fix some text visibility; fix sky and ocean

--- a/client/src/app/components/pages/controller/controller.component.scss
+++ b/client/src/app/components/pages/controller/controller.component.scss
@@ -211,12 +211,13 @@
                 align-items: center;
                 gap: 10px;
                 font-size: 18px;
+                height: 50px;
 
                 input {
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    height: 40px;
+                    height: 50px;
                     outline: none;
                     background-color: transparent;
                     border: 2px solid #606060;
